--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <option value="Walk Trip>">Walk Trip</option>
                     <option value="Bicycle Trip">Bicycle Trip</option>
                   </select>
-              <button type="submit" class="btn">search</button>
+              <input type="submit" class="btn" value="Search">
             </form>
         
         </div>          
