--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             color: white;
             min-height: 100vh;
         }
+        
+        input[type=submit]:hover, a:hover{
+          background-color:rgb(132, 212, 95);
+        }
 
          nav  {
             position: relative;
